# erased-cells

./: .eai.makefile  .eai.yaml  .gitignore  Cargo.toml  LICENSE.md  LICENSE.txt  Makefile  README.md  RELEASE.md  codecov.yml  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.cargo/: config.toml  release-hook.sh
.github/workflows/: CI.yml
erased_cells/: all.html  enum.CellBuffer.html  enum.CellType.html  enum.CellValue.html  enum.NoData.html  index.html  macro.with_ct!.html  macro.with_ct.html  sidebar-items.js  struct.CellBufferIterator.html  struct.Mask.html  struct.MaskedCellBuffer.html  struct.MaskedCellBufferIterator.html  trait.BufferOps.html  trait.CellEncoding.html  trait.IsNodata.html
erased_cells/buffer/: enum.CellBuffer.html
erased_cells/error/: enum.Error.html  index.html  type.Result.html
erased_cells/value/: enum.CellValue.html
examples/: gdal.rs  macros.rs  masked.rs  quick.rs  simple.rs
num_traits/: struct.ParseFloatError.html  trait.Num.html
num_traits/bounds/: trait.Bounded.html
num_traits/cast/: trait.AsPrimitive.html  trait.FromPrimitive.html  trait.NumCast.html  trait.ToPrimitive.html
num_traits/identities/: trait.One.html  trait.Zero.html
num_traits/int/: trait.PrimInt.html
num_traits/pow/: trait.Pow.html
num_traits/sign/: trait.Signed.html  trait.Unsigned.html
proc_macro2/: enum.TokenTree.html  struct.Ident.html  struct.LexError.html  struct.TokenStream.html
quote/: trait.IdentFragment.html  trait.ToTokens.html
serde/: trait.Deserialize.html  trait.Serialize.html
serde/de/: trait.Deserialize.html  trait.IntoDeserializer.html
serde/ser/: struct.Impossible.html  trait.Serialize.html
src/: buffer.rs  ctype.rs  encoding.rs  error.rs  lib.rs  mask.rs  masked.rs  value.rs  with_ct.md
src/erased_cells/: buffer.rs.html  ctype.rs.html  encoding.rs.html  error.rs.html  lib.rs.html  value.rs.html
src/gdal/: mod.rs  rasterband.rs
src/masked/: mask.rs  masked_buffer.rs  mod.rs  nodata.rs
src/num_traits/: bounds.rs.html  cast.rs.html  float.rs.html  identities.rs.html  int.rs.html  lib.rs.html  macros.rs.html  pow.rs.html  real.rs.html  sign.rs.html
src/paste/: attr.rs.html  error.rs.html  lib.rs.html  segment.rs.html
src/proc_macro2/: detection.rs.html  extra.rs.html  fallback.rs.html  lib.rs.html  marker.rs.html  parse.rs.html  rcvec.rs.html  wrapper.rs.html
src/quote/: ext.rs.html  format.rs.html  ident_fragment.rs.html  lib.rs.html  runtime.rs.html  spanned.rs.html  to_tokens.rs.html
src/serde/: integer128.rs.html  lib.rs.html  macros.rs.html
src/serde_derive/: bound.rs.html  de.rs.html  (+6 more)
static.files/: help.html  search-index.js  settings.html
syn/: enum.Expr.html  enum.Fields.html  enum.GenericParam.html  enum.Lit.html  enum.Member.html  enum.Type.html  struct.Ident.html  struct.Path.html
testkit/: Cargo.toml
(+206 files in other folders)
