[package]
name = "erased-cells"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.md"

[features]
default = ["masked", "serde"]
masked = []
serde = ["dep:serde"]

[dependencies]
num-traits = "0.2"
thiserror = "1"
paste = "1"
serde = { version = "1", features = ["derive"], optional = true }
