[workspace]
resolver = "2"
members = ["testkit"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Simeon H.K. Fitch <fitch@astraea.io>",]
keywords = ["buffers", "nodata", "raster", "cells", "pixels"]
categories = ["data-structures", "encoding", "science::geo", "graphics"]
repository = "https://github.com/s22s/erased-cells/"
homepage = "https://s22s.github.io/erased-cells/"

[package]
name = "erased-cells"
description = "Create to enable manipulation of heterogeneous values and buffers of Rust primitive numeric types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["masked", "serde"]
# Enables masked buffers
masked = []
# Enables serde
serde = ["dep:serde"]
gdal = ["masked", "dep:extend", "dep:gdal" ]

[workspace.dependencies]
once_cell = "1.19.0"

[dependencies]
num-traits = "0.2"
thiserror = "1"
paste = "1"
serde = { version = "1", features = ["derive"], optional = true }
extend = { version = "1.2", optional = true }
gdal = { version = "0.16.0", optional = true }

[dev-dependencies]
erased-cells-testkit = { path = "testkit" }

[package.metadata.docs.rs]
all-features = true

[workspace.metadata.release]
enable-all-features = true
consolidate-commits = true
allow-branch = ["main"]
push = false
pre-release-commit-message = "Released version {{version}}"
pre-release-hook = [".cargo/release-hook.sh"]
